--- a/Draft import data MDA.ipynb
+++ b/Draft import data MDA.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ae3eea84",
+   "id": "45ef08f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "8c5dee53",
+   "execution_count": 54,
+   "id": "8a8138f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,13 +26,13 @@
     "#Mortality\n",
     "GitURL_BelgiumDeath = 'https://raw.githubusercontent.com/StevenPeutz/MDA_HeatWaveAnalysis/master/dataset/cause_of_death.xlsx'\n",
     "GitURL_NetherlandsDeath = 'https://raw.githubusercontent.com/StevenPeutz/MDA_HeatWaveAnalysis/master/dataset/mortalityNetherlands.csv'\n",
-    "\n"
+    "GitURL_NetherlandsDeath2 = 'https://raw.githubusercontent.com/StevenPeutz/MDA_HeatWaveAnalysis/master/dataset/mortalityNL_manuallycleaned.csv'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "fac15ce6",
+   "id": "a950110f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d81d2450",
+   "id": "30c4af5a",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "5b909883",
+   "id": "df9e79d3",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "d68811c0",
+   "id": "b6619315",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "7cd6b9f7",
+   "id": "721f8f03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "d01e8127",
+   "id": "31c8a529",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "7c2e20d7",
+   "id": "a7e5d865",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "844825a7",
+   "id": "37b38379",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "97811cb1",
+   "id": "a57dc45a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,29 +348,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "f20e5e12",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(93, 1)"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_MortalityNL.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 27,
-   "id": "bc1f1b39",
+   "id": "35c0ac4a",
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1b8b31c",
+   "id": "398b797e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,6 +417,119 @@
     "\n",
     "'''"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "e3916516",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for now moving on with new dataset (newly uploaded, same dataset but row headers fixed manually)\n",
+    "df_MortalityNL = pd.read_csv(GitURL_NetherlandsDeath2, skiprows=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "3e0af473",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(91, 1)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_MortalityNL.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "95d390ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>1996 2e kwartaal;33618;9426;2171;917;6338;1772;12507;3673;3063;5771;3089;6824</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1996 3e kwartaal;31499;9494;2109;883;6502;1619...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1996 4e kwartaal;33892;9742;2218;907;6617;1680...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1997 1e kwartaal;37134;9612;2203;926;6483;1976...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1997 2e kwartaal;32710;9405;2102;856;6447;1682...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1997 3e kwartaal;32520;9494;2093;928;6473;1865...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  1996 2e kwartaal;33618;9426;2171;917;6338;1772;12507;3673;3063;5771;3089;6824\n",
+       "0  1996 3e kwartaal;31499;9494;2109;883;6502;1619...                           \n",
+       "1  1996 4e kwartaal;33892;9742;2218;907;6617;1680...                           \n",
+       "2  1997 1e kwartaal;37134;9612;2203;926;6483;1976...                           \n",
+       "3  1997 2e kwartaal;32710;9405;2102;856;6447;1682...                           \n",
+       "4  1997 3e kwartaal;32520;9494;2093;928;6473;1865...                           "
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_MortalityNL.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e8ca7f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
