--- a/Draft import data MDA.ipynb
+++ b/Draft import data MDA.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "45ef08f2",
+   "id": "1b6971ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "8a8138f1",
+   "execution_count": 61,
+   "id": "2c9085d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a950110f",
+   "id": "703a2d33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "30c4af5a",
+   "id": "6a98f661",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "df9e79d3",
+   "id": "6fae9967",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "b6619315",
+   "id": "9998a077",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "721f8f03",
+   "id": "759daae8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "31c8a529",
+   "id": "cc9e0743",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "a7e5d865",
+   "id": "a4c5e349",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "37b38379",
+   "id": "c387475b",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "a57dc45a",
+   "id": "23a73b86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "35c0ac4a",
+   "id": "84732489",
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "398b797e",
+   "id": "f4006e17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,18 +421,18 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "e3916516",
+   "id": "e8475aa9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# for now moving on with new dataset (newly uploaded, same dataset but row headers fixed manually)\n",
-    "df_MortalityNL = pd.read_csv(GitURL_NetherlandsDeath2, skiprows=2)"
+    "df_MortalityNL = pd.read_csv(GitURL_NetherlandsDeath2,)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "3e0af473",
+   "id": "f8d054df",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "95d390ab",
+   "id": "5754f871",
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e8ca7f8",
+   "id": "3b4e4080",
    "metadata": {},
    "outputs": [],
    "source": []
