xls instead of csv..

--- a/Draft import data MDA.ipynb
+++ b/Draft import data MDA.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1b6971ec",
+   "id": "c0ef6b79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "2c9085d7",
+   "execution_count": 65,
+   "id": "9a812eae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "703a2d33",
+   "id": "0ee4d049",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6a98f661",
+   "id": "5df90627",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6fae9967",
+   "id": "9340002a",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "9998a077",
+   "id": "7340a876",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "759daae8",
+   "id": "53a9f513",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "cc9e0743",
+   "id": "2e3bf889",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "a4c5e349",
+   "id": "58a5bf1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "c387475b",
+   "id": "799cd8bc",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "23a73b86",
+   "id": "0c50fd5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "84732489",
+   "id": "b5760d3f",
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4006e17",
+   "id": "eee16881",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,28 +420,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "e8475aa9",
+   "execution_count": 66,
+   "id": "2e80bb4c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# for now moving on with new dataset (newly uploaded, same dataset but row headers fixed manually)\n",
-    "df_MortalityNL = pd.read_csv(GitURL_NetherlandsDeath2,)"
+    "df_MortalityNL = pd.read_csv(GitURL_NetherlandsDeath2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "f8d054df",
+   "execution_count": 67,
+   "id": "04515569",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(91, 1)"
+       "(93, 13)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,8 +452,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "5754f871",
+   "execution_count": 68,
+   "id": "e6029987",
    "metadata": {},
    "outputs": [
     {
@@ -477,44 +477,186 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>1996 2e kwartaal;33618;9426;2171;917;6338;1772;12507;3673;3063;5771;3089;6824</th>\n",
+       "      <th>Perioden</th>\n",
+       "      <th>;Totaal alle overledenen</th>\n",
+       "      <th>;Nieuwvormingen|Totaal nieuwvormingen</th>\n",
+       "      <th>;Nieuwvormingen|Kwaadaardige nv. van luchtpijp en long</th>\n",
+       "      <th>;Nieuwvormingen|Kwaadaardige nieuwvorming van borst</th>\n",
+       "      <th>;Nieuwvormingen|Overige nieuwvormingen</th>\n",
+       "      <th>;Psychische stoornis. en zktn zenuwstel</th>\n",
+       "      <th>;Ziekten van hart en vaatstelsel|Totaal ziekten van hart en vaatstelsel</th>\n",
+       "      <th>;Ziekten van hart en vaatstelsel|Acuut hartinfarct</th>\n",
+       "      <th>;Ziekten van hart en vaatstelsel|Hersenvaatletsels</th>\n",
+       "      <th>;Ziekten van hart en vaatstelsel|Overige ziekten van hart en vaatstelsel</th>\n",
+       "      <th>;Ziekten van de ademhalingsorganen</th>\n",
+       "      <th>;Overige doodsoorzaken</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1996 3e kwartaal;31499;9494;2109;883;6502;1619...</td>\n",
+       "      <td>1996 1e kwartaal;38552;9609;2073;870;6666;2036...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1996 4e kwartaal;33892;9742;2218;907;6617;1680...</td>\n",
+       "      <td>1996 2e kwartaal;33618;9426;2171;917;6338;1772...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1997 1e kwartaal;37134;9612;2203;926;6483;1976...</td>\n",
+       "      <td>1996 3e kwartaal;31499;9494;2109;883;6502;1619...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1997 2e kwartaal;32710;9405;2102;856;6447;1682...</td>\n",
+       "      <td>1996 4e kwartaal;33892;9742;2218;907;6617;1680...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1997 3e kwartaal;32520;9494;2093;928;6473;1865...</td>\n",
+       "      <td>1997 1e kwartaal;37134;9612;2203;926;6483;1976...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  1996 2e kwartaal;33618;9426;2171;917;6338;1772;12507;3673;3063;5771;3089;6824\n",
-       "0  1996 3e kwartaal;31499;9494;2109;883;6502;1619...                           \n",
-       "1  1996 4e kwartaal;33892;9742;2218;907;6617;1680...                           \n",
-       "2  1997 1e kwartaal;37134;9612;2203;926;6483;1976...                           \n",
-       "3  1997 2e kwartaal;32710;9405;2102;856;6447;1682...                           \n",
-       "4  1997 3e kwartaal;32520;9494;2093;928;6473;1865...                           "
+       "                                            Perioden  \\\n",
+       "0  1996 1e kwartaal;38552;9609;2073;870;6666;2036...   \n",
+       "1  1996 2e kwartaal;33618;9426;2171;917;6338;1772...   \n",
+       "2  1996 3e kwartaal;31499;9494;2109;883;6502;1619...   \n",
+       "3  1996 4e kwartaal;33892;9742;2218;907;6617;1680...   \n",
+       "4  1997 1e kwartaal;37134;9612;2203;926;6483;1976...   \n",
+       "\n",
+       "   ;Totaal alle overledenen  ;Nieuwvormingen|Totaal nieuwvormingen  \\\n",
+       "0                       NaN                                    NaN   \n",
+       "1                       NaN                                    NaN   \n",
+       "2                       NaN                                    NaN   \n",
+       "3                       NaN                                    NaN   \n",
+       "4                       NaN                                    NaN   \n",
+       "\n",
+       "   ;Nieuwvormingen|Kwaadaardige nv. van luchtpijp en long  \\\n",
+       "0                                                NaN        \n",
+       "1                                                NaN        \n",
+       "2                                                NaN        \n",
+       "3                                                NaN        \n",
+       "4                                                NaN        \n",
+       "\n",
+       "   ;Nieuwvormingen|Kwaadaardige nieuwvorming van borst  \\\n",
+       "0                                                NaN     \n",
+       "1                                                NaN     \n",
+       "2                                                NaN     \n",
+       "3                                                NaN     \n",
+       "4                                                NaN     \n",
+       "\n",
+       "   ;Nieuwvormingen|Overige nieuwvormingen  \\\n",
+       "0                                     NaN   \n",
+       "1                                     NaN   \n",
+       "2                                     NaN   \n",
+       "3                                     NaN   \n",
+       "4                                     NaN   \n",
+       "\n",
+       "   ;Psychische stoornis. en zktn zenuwstel  \\\n",
+       "0                                      NaN   \n",
+       "1                                      NaN   \n",
+       "2                                      NaN   \n",
+       "3                                      NaN   \n",
+       "4                                      NaN   \n",
+       "\n",
+       "   ;Ziekten van hart en vaatstelsel|Totaal ziekten van hart en vaatstelsel  \\\n",
+       "0                                                NaN                         \n",
+       "1                                                NaN                         \n",
+       "2                                                NaN                         \n",
+       "3                                                NaN                         \n",
+       "4                                                NaN                         \n",
+       "\n",
+       "   ;Ziekten van hart en vaatstelsel|Acuut hartinfarct  \\\n",
+       "0                                                NaN    \n",
+       "1                                                NaN    \n",
+       "2                                                NaN    \n",
+       "3                                                NaN    \n",
+       "4                                                NaN    \n",
+       "\n",
+       "   ;Ziekten van hart en vaatstelsel|Hersenvaatletsels  \\\n",
+       "0                                                NaN    \n",
+       "1                                                NaN    \n",
+       "2                                                NaN    \n",
+       "3                                                NaN    \n",
+       "4                                                NaN    \n",
+       "\n",
+       "   ;Ziekten van hart en vaatstelsel|Overige ziekten van hart en vaatstelsel  \\\n",
+       "0                                                NaN                          \n",
+       "1                                                NaN                          \n",
+       "2                                                NaN                          \n",
+       "3                                                NaN                          \n",
+       "4                                                NaN                          \n",
+       "\n",
+       "   ;Ziekten van de ademhalingsorganen  ;Overige doodsoorzaken  \n",
+       "0                                 NaN                     NaN  \n",
+       "1                                 NaN                     NaN  \n",
+       "2                                 NaN                     NaN  \n",
+       "3                                 NaN                     NaN  \n",
+       "4                                 NaN                     NaN  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b4e4080",
+   "id": "3b75018b",
    "metadata": {},
    "outputs": [],
    "source": []
